<?xml version='1.0'?>
<!--

 Licensed to the Apache Software Foundation (ASF) under one
 or more contributor license agreements.  See the NOTICE file
 distributed with this work for additional information
 regarding copyright ownership.  The ASF licenses this file
 to you under the Apache License, Version 2.0 (the
 "License"); you may not use this file except in compliance
 with the License.  You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing,
 software distributed under the License is distributed on an
 "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 KIND, either express or implied.  See the License for the
 specific language governing permissions and limitations
 under the License.

-->

<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.apache.phoenix</groupId>
    <artifactId>phoenix-connectors</artifactId>
    <version>6.0.0-SNAPSHOT</version>
  </parent>
  <artifactId>phoenix-hive-base</artifactId>
  <name>Phoenix Hive Connector - Base</name>

  <packaging>pom</packaging>
  <modules>
    <module>phoenix4-hive</module>
    <module>phoenix5-hive</module>
  </modules>

  <properties>
    <test.tmp.dir>${project.build.directory}/tmp</test.tmp.dir>
    <tez.version>0.9.1</tez.version>
    <jdk.version>1.8</jdk.version>
    <commons-lang3.version>3.9</commons-lang3.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.apache.phoenix</groupId>
      <artifactId>phoenix-core</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.phoenix.thirdparty</groupId>
      <artifactId>phoenix-shaded-guava</artifactId>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>${commons-lang3.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.hive</groupId>
      <artifactId>hive-cli</artifactId>
      <version>${hive.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.hive</groupId>
      <artifactId>hive-common</artifactId>
      <version>${hive.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.hive</groupId>
      <artifactId>hive-exec</artifactId>
      <version>${hive.version}</version>
      <scope>provided</scope>
    </dependency>
    <!-- These three dependencies are falsely flagged by dependency plugin -->
    <dependency>
      <groupId> org.apache.hive</groupId>
      <artifactId>hive-serde</artifactId>
      <version>${hive.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId> org.apache.hive</groupId>
      <artifactId>hive-storage-api</artifactId>
      <version>${hive-storage.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId> org.apache.hive.shims</groupId>
      <artifactId>hive-shims-common</artifactId>
      <version>${hive.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.hbase</groupId>
      <artifactId>hbase-protocol</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.hbase</groupId>
      <artifactId>hbase-client</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.hbase</groupId>
      <artifactId>hbase-common</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.hadoop</groupId>
      <artifactId>hadoop-common</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.hadoop</groupId>
      <artifactId>hadoop-mapreduce-client-core</artifactId>
    </dependency>

    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-compress</artifactId>
      <version>${commons-compress.version}</version>
    </dependency>

    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>${commons-io.version}</version>
    </dependency>

    <!-- FIXME do we have any good reason not migrate to SLF4j fully ? -->
    <dependency>
      <groupId>commons-logging</groupId>
      <artifactId>commons-logging</artifactId>
      <version>${commons-logging.version}</version>
    </dependency>

    <!-- Test dependencies -->
    <dependency>
      <groupId>org.apache.phoenix</groupId>
      <artifactId>phoenix-core</artifactId>
      <classifier>tests</classifier>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.hbase</groupId>
      <artifactId>hbase-server</artifactId>
      <type>test-jar</type>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.hbase</groupId>
      <artifactId>hbase-it</artifactId>
      <type>test-jar</type>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.hadoop</groupId>
      <artifactId>hadoop-hdfs</artifactId>
      <type>test-jar</type>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-all</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.tez</groupId>
      <artifactId>tez-tests</artifactId>
      <scope>test</scope>
      <version>${tez.version}</version>
      <type>test-jar</type>
      <exclusions>
        <exclusion>
          <groupId>org.apache.hadoop</groupId>
          <artifactId>hadoop-yarn-api</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.apache.tez</groupId>
      <artifactId>tez-dag</artifactId>
      <scope>test</scope>
      <version>${tez.version}</version>
      <exclusions>
        <exclusion>
          <groupId>org.apache.hadoop</groupId>
          <artifactId>hadoop-yarn-api</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <!-- Bogus test dependencies from the copied Hive QTestUtil -->
    <dependency>
      <groupId>org.apache.ant</groupId>
      <artifactId>ant</artifactId>
      <scope>test</scope>
      <version>1.9.1</version>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-api</artifactId>
      <scope>test</scope>
      <version>2.6.2</version>
    </dependency>

  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-dependency-plugin</artifactId>
          <configuration>
            <ignoredUnusedDeclaredDependencies>
              <!-- These are all used -->
              <ignoredUnusedDeclaredDependency>
                org.apache.hive:hive-serde
              </ignoredUnusedDeclaredDependency>
              <ignoredUnusedDeclaredDependency>
                org.apache.hive:hive-storage-api
              </ignoredUnusedDeclaredDependency>
              <ignoredUnusedDeclaredDependency>
                org.apache.hive.shims:hive-shims-common
              </ignoredUnusedDeclaredDependency>
              <ignoredUnusedDeclaredDependency>
                org.apache.hbase:hbase-it
              </ignoredUnusedDeclaredDependency>
              <ignoredUnusedDeclaredDependency>
                org.apache.tez:tez-tests
              </ignoredUnusedDeclaredDependency>
              <ignoredUnusedDeclaredDependency>
                org.apache.tez:tez-dag
              </ignoredUnusedDeclaredDependency>
              <ignoredUnusedDeclaredDependency>
                org.apache.logging.log4j:log4j-core
              </ignoredUnusedDeclaredDependency>
              <ignoredUnusedDeclaredDependency>
                org.apache.hadoop:hadoop-minicluster
              </ignoredUnusedDeclaredDependency>
              <ignoredUnusedDeclaredDependency>
                org.apache.hadoop:hadoop-hdfs
              </ignoredUnusedDeclaredDependency>
            </ignoredUnusedDeclaredDependencies>
            <ignoredUsedUndeclaredDependencies>
              <!-- I couldn't find it referenced anywhere in the phoenix-hive codebase -->
              <ignoredUnusedDeclaredDependency>
                com.google.code.findbugs:jsr305
              </ignoredUnusedDeclaredDependency>
              <!-- This one is real, but I don't want to force users to specify both
                HBase AND Zookeeper versions so we'll just pretend that it's declared properly, 
                and take whatever version we get -->
              <ignoredUsedUndeclaredDependency>
                org.apache.zookeeper:zookeeper
              </ignoredUsedUndeclaredDependency>
            </ignoredUsedUndeclaredDependencies>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>build-helper-maven-plugin</artifactId>
          <executions>
            <execution>
              <id>add-parent-source</id>
              <phase>generate-sources</phase>
              <goals>
                <goal>add-source</goal>
              </goals>
              <configuration>
                <sources>
                  <source>${project.parent.basedir}/src/main/java</source>
                </sources>
              </configuration>
            </execution>
            <execution>
              <id>add-parent-test-source</id>
              <phase>generate-sources</phase>
              <goals>
                <goal>add-test-source</goal>
              </goals>
              <configuration>
                <sources>
                  <source>${project.parent.basedir}/src/it/java</source>
                  <source>${project.parent.basedir}/src/test/java</source>
                </sources>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <artifactId>maven-failsafe-plugin</artifactId>
          <configuration>
            <!-- The Hbase + Hive minicluster setup seems very fragile, so
            we make sure to run everything as serially as possible -->
            <forkCount>1</forkCount>
            <reuseForks>false</reuseForks>
          </configuration>
          <executions>
            <execution>
              <id>ParallelStatsDisabledTest</id>
              <configuration>
                <forkCount>1</forkCount>
                <reuseForks>false</reuseForks>
                <argLine>-Xmx3000m -XX:MaxPermSize=256m -Djava.security.egd=file:/dev/./urandom "-Djava.library.path=${hadoop.library.path}${path.separator}${java.library.path}" -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=./target/</argLine>
                <groups>org.apache.phoenix.end2end.ParallelStatsDisabledTest</groups>
              </configuration>
              <goals>
                <goal>integration-test</goal>
                <goal>verify</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <executions>
            <execution>
              <id>copy-resources</id>
              <phase>generate-resources</phase>
              <goals>
                <goal>copy-resources</goal>
              </goals>
              <configuration>
                <outputDirectory>${project.build.directory}/test-classes
                </outputDirectory>
                <overwrite>true</overwrite>
                <resources>
                  <resource>
                    <directory>${project.parent.basedir}/src/test/resources</directory>
                  </resource>
                </resources>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <artifactId>maven-assembly-plugin</artifactId>
          <configuration>
            <descriptorRefs>
              <descriptorRef>jar-with-dependencies</descriptorRef>
            </descriptorRefs>
          </configuration>
          <executions>
            <execution>
              <id>make-jar-with-dependencies</id>
              <phase>package</phase>
              <goals>
                <goal>single</goal>
              </goals>
              <configuration>
                <appendAssemblyId>false</appendAssemblyId>
                <finalName>phoenix${phoenix.main.version}-${project.version}-hive</finalName>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
            <source>8</source>
            <target>8</target>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
